welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: reassignment to val
    die1=tourneDe1(die1)
        ^