welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (!noDoubles){
    return die1+die2
  }
  else{
    die1=tourneDe1(die1)
    return die1+die2
  }
}



def tourneDe1(a:Int):Int={
  if (a<=5){
    return a+1
  }
  else{
    return 1
  }
}